[package]
name = "caps-caps"
version = "0.1.0"
authors = ["adeyahya <adeyahyaprasetyo@gmail.com>"]
license = "BSD 3-Clause License"
description = "Capslock on steroids"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
systray = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
